--- a/数据分析/analyze.ipynb
+++ b/数据分析/analyze.ipynb
@@ -177,6 +177,7 @@
     "import pandas as pd\n",
     "\n",
     "mask_data_clean = pd.read_csv('./课程素材/工作/mask_data_clean.csv', encoding='utf-8')\n",
+    "# mask_data_clean = pd.to_csv('./课程素材/工作/mask_data_clean.csv', encoding='utf-8', index=False)\n",
     "mask_data_clean"
    ]
   },
