--- a/数据分析/RFM.ipynb
+++ b/数据分析/RFM.ipynb
@@ -102,9 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 9\u001b[0m\n\u001b[0;32m      1\u001b[0m score_info \u001b[39m=\u001b[39m {\n\u001b[0;32m      2\u001b[0m     \u001b[39m'\u001b[39m\u001b[39m学号\u001b[39m\u001b[39m'\u001b[39m:[\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m], \n\u001b[0;32m      3\u001b[0m     \u001b[39m'\u001b[39m\u001b[39m性别\u001b[39m\u001b[39m'\u001b[39m:[\u001b[39m'\u001b[39m\u001b[39m女\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m女\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m女\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[0;32m      4\u001b[0m     \u001b[39m'\u001b[39m\u001b[39m年龄\u001b[39m\u001b[39m'\u001b[39m:[\u001b[39m'\u001b[39m\u001b[39m15\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m18\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m16\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[0;32m      5\u001b[0m     \u001b[39m'\u001b[39m\u001b[39m总分\u001b[39m\u001b[39m'\u001b[39m:[\u001b[39m'\u001b[39m\u001b[39m290\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m288\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m269\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m }\n\u001b[0;32m      8\u001b[0m \u001b[39m# 创建一个 DataFrame 对象的数据\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m data_4 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(score_info)\n\u001b[0;32m     10\u001b[0m \u001b[39m# 将数据写入到【汇总成绩单.xlsx】工作簿中的【汇总】工作表\u001b[39;00m\n\u001b[0;32m     11\u001b[0m data_4\u001b[39m.\u001b[39mto_excel(\u001b[39m'\u001b[39m\u001b[39m./课程素材/工作/汇总成绩单.xlsx\u001b[39m\u001b[39m'\u001b[39m, sheet_name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m汇总\u001b[39m\u001b[39m'\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "score_info = {\n",
     "    '学号':[1, 2, 3], \n",
