--- a/数据分析/RFM.ipynb
+++ b/数据分析/RFM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "4   5  男  16  288"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "2   王鱼  67  90  95  252"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "4  女  山头市  26  读书"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "4  女  汕头市  26  读书"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "4  女  山头市  26  读书"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "4  女  汕头市  26  读书"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,6 +577,106 @@
     "# 对【城市】列的错字进行修改\n",
     "data_7['城市'] = data_7['城市'].replace(fix_typo)\n",
     "data_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>姓名</th>\n",
+       "      <th>性别</th>\n",
+       "      <th>专业</th>\n",
+       "      <th>挂科次数</th>\n",
+       "      <th>旷课次数</th>\n",
+       "      <th>总次数</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>零某某</td>\n",
+       "      <td>男</td>\n",
+       "      <td>生物信息</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>开除</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>徐放牛</td>\n",
+       "      <td>男</td>\n",
+       "      <td>人工智能</td>\n",
+       "      <td>5</td>\n",
+       "      <td>44</td>\n",
+       "      <td>延毕</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>文学</td>\n",
+       "      <td>男</td>\n",
+       "      <td>电子竞技</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>延毕</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    姓名 性别    专业 挂科次数  旷课次数 总次数\n",
+       "0  零某某  男  生物信息    7    45  开除\n",
+       "1  徐放牛  男  人工智能    5    44  延毕\n",
+       "2   文学  男  电子竞技    4    30  延毕"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_7 = pd.DataFrame({'姓名': ['零某某', '徐放牛', '文学'],\n",
+    "                    '性别': ['男', '男', '男'],\n",
+    "                    '专业': ['生物信息', '人工智能', '电子竞技'],\n",
+    "                    '挂科次数': ['7', '5', '4'],\n",
+    "                    '旷课次数': [45, 44, 30],\n",
+    "                    '总次数': [52, 49, 34]})\n",
+    "\n",
+    "# 先定义一个函数\n",
+    "def map_judge(x):\n",
+    "    if x >= 50:\n",
+    "        return \"开除\"\n",
+    "    else:\n",
+    "        return \"延毕\"\n",
+    "\n",
+    "# 将函数 map_judge 作为参数传入 df.map()\n",
+    "df_7['总次数'] = df_7['总次数'].map(map_judge)\n",
+    "\n",
+    "# 查看数据\n",
+    "df_7"
    ]
   }
  ],
